ARROW-6582: [R] Arrow to R fails with embedded nuls in strings

Closes #8365 from nealrichardson/r-nul

Lead-authored-by: Benjamin Kietzman <bengilgit@gmail.com>
Co-authored-by: Neal Richardson <neal.p.richardson@gmail.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>